# profile-rag

./: .gitignore  README.md  gradio_app.py  main.py  process_profile.py  pyproject.toml  requirements.txt  template.py  test_mcp_tools.py  test_router.py
api/: app.py  resume_router.py  schemas.py
mcp_client/: job_client.py  linkedin_client.py
mcp_server/: server.py
src/agents/: job_match_agent.py  orchestrator.py  recommendations_agent.py  retrieval_agent.py  supervisor_agent.py
src/config/: logger.py  settings.py
src/llm/: llm_interface.py
src/processing/: data_processing.py  resume_processing.py
src/rag/: eval.py  query_engine.py  resume_index.py
src/schemas/: agent_outputs.py  fit_analysis.py  recommendations.py
src/services/: profile_service.py  resume_service.py
tests/: test_eval.py  test_mcp_client.py  test_mcp_tools.py  test_rag.py  test_router.py
